--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+* {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+body {
+  background-color: #f8f8f8;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +44,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.company-card {
+  color: red;
+  border:'1px solid lightgray';
+  margin: '20px';
+  padding: '15px';
+  text-align: 'left'
+}
+
+.company-card-content {
+  text-decoration: none;
+  color: black;
+}
+
+.company-card-content:hover {
+  /* border: 2px solid black; */
+  color: #007bff;
+}
+
+.job-card:hover {
+  color: black;
 }
