--- a/src/NavigationBar.css
+++ b/src/NavigationBar.css
@@ -1,10 +1,12 @@
 .NavBar {
-    background-color: black;
+    /* background-color: black; */
     overflow: hidden;
+    border-bottom: 2px solid rgba(0,0,0,.125);
+    padding: .5rem 1rem
 }
 
 .NavBar a {
-    color: #f2f2f2;
+    color: #007bff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -17,6 +19,6 @@
 }
 
 .NavBar a.active {
-    background-color: #04AA6D;
+    background-color: #007bff;
     color: white;
 }
